@@ -8,6 +8,10 @@
      [channels.c pathnames.h]
      use only one path to X11 UNIX domain socket vs. an array of paths
      to try.  report from djast@cs.toronto.edu.  ok markus@
+   - markus@cvs.openbsd.org 2001/12/09 18:45:56
+     [auth2.c auth2-chall.c auth.h]
+     add auth2_challenge_stop(), simplifies cleanup of kbd-int sessions,
+     fixes memleak.
 
 20011219
  - (stevesk) OpenBSD CVS sync X11 localhost display
@@ -7036,4 +7040,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1694 2001/12/21 01:39:51 djm Exp $
+$Id: ChangeLog,v 1.1695 2001/12/21 01:42:34 djm Exp $
